# befree-bubble-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
bridge/figma/: server.mjs
chrome-extension/: README.md  background.js  bridge.js  content.js  manifest.json  popup.html  popup.js
docs/: architecture.md  browser-automation.md  buildprint-parity.md  cli-reference.md  context-engine.md  extension-packs.md  figma-bridge.md  figma-plugin.md  framework-adapters.md  getting-started.md  harness-and-evals.md  html-style-import-evolution.md  html-to-bubble.md  installation.md  knowledge-sources.md  learning.md  mcp-clients.md  planner.md  profiles.md  release-checklist.md  safety-model.md  session-capture.md  skills.md  source-audit.md  tool-authoring.md  tool-schema-development.md  transfer.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-07-executable-skills-v1.md  2026-07-07-framework-adapters-v1.md  2026-07-08-bubble-github-history-restore.md  2026-07-08-bubble-mcp-cross-project-transfer.md  2026-07-08-dynamic-language-registry-v1.md  2026-07-08-dynamic-language-registry-v2.md  (+1 more)
scripts/: audit_sensitive_paths.py  build_eval_corpus.py  install_local.py  package_smoke.py  setup_smoke.py
src/bubble_mcp/: __init__.py  aria_dispatch.py  catalog_quality.py  extension_companion.py  figma_bridge.py  html_runtime.py  profile_status.py  readiness.py  runtime_coverage.py  runtime_smoke.py  runtime_smoke_validation.py  visual_defaults.py
test-node/: figma-bridge.test.mjs
tests/unit/: test_aria_dispatch.py  test_catalog_quality.py  test_cli_commands.py  test_compiler.py  test_config.py  test_context.py  test_context_detector.py  test_context_importers.py  test_context_overlay.py  test_corpus_builder.py  test_create_defaults_golden.py  test_editor_api.py  test_eval_runner.py  test_execution.py  test_expert_export.py  test_extension_companion.py  test_extension_tool_schemas.py  test_extensions.py  test_figma_bridge.py  test_framework_adapters.py  test_framework_program_runner.py  test_framework_text_planner.py  test_framework_workspace.py  test_html_converter.py  test_install_local.py  test_knowledge_advisor.py  test_knowledge_cache.py  test_language_program.py  test_language_registry.py  test_learning.py  test_mcp_server.py  test_planner_validator.py  test_profile_status.py  test_readiness.py  test_redaction.py  test_runtime_smoke.py  test_runtime_smoke_validation.py  test_scheduled_deploy.py  test_sensitive_audit.py  test_sessions.py  (+21 more)
(+178 files in other folders)
