[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "befree-bubble-mcp"
version = "0.1.0"
description = "Local-first Bubble automation toolkit with CLI, MCP server, context engine, planner, and converters."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "charset-normalizer>=3.3,<3.4.7",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]
server = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0"
]
browser = [
  "playwright>=1.45.0"
]

[project.scripts]
bubble-mcp = "bubble_mcp.cli.main:main"
bubble-mcp-figma-bridge = "bubble_mcp.figma_bridge:main"
bubble-mcp-server = "bubble_mcp.server.stdio:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bubble_mcp.planner" = ["*.json"]
"bubble_mcp.aria_runtime.figma_bridge" = ["*.json"]
"bubble_mcp.aria_runtime" = ["package.json", "scripts/*.mjs", "scripts/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/bubble_mcp/aria_runtime"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "(src/bubble_mcp/aria_runtime/|src/bubble_mcp/figma_bridge.py)"

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true
